Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * Added mdelete() to DB/Flatfile.
    * Added topic() to API::IRC.
    * Added has_priv() to API::Std.
    * Finished the host-based privilege/permission system.
    * Added hook on_preconnect, this comes before USER (after PASS).
    * Added match_mask() to API::IRC and match_user() to API::Std,
      match_user checks config user:mask to find a user block, if
      a match is found, the configured username is returned.
    * Added rchook_add() and rchook_del() to API::Std.
    * Parse NOTICE and added hook on_notice.
    * Added hooks on_uprivmsg and on_cprivmsg.
    * Module names are now case sensitive.
    * Added config option module for auto-loading a module.
    * Fixed a bug in API::Log that caused invalid months.
    * Changed how command data is passed to fix a bug.
    * Removed dependency Async.
    * Rewrote the socket engine.
    * Added cmd_add|del|run() to API::Std for commands.
    * Parse PRIVMSG.
    * Enabled ./install features are now stored in $Auto::ENFEAT.
    * Added --enable-sasl option to ./install for enabling SASL.
    * Added names() to API::IRC which sends NAMES.
    * Parse NAME replies (Numeric:353).
    * Parse Numeric:005 and store PREFIX's data.
    * Bug fix: The bot's nick is now stored correctly.
    * Added server:modes config option for setting modes on
      connect.
    * Parse TOPIC. (and added hook on_topic)
    * Added DB::Flatfile for DB:: database functions.
    * Added umode() to API::IRC.
    * Added events on_ucjoin, on_rcjoin and on_nick.
    * Parse numerics 465, 471-475 and 477.
    * Added an optional @args onto event_run() for sending @args
      to the subs that have hooked onto the event.
    * Parse the channels the bot is in.
    * Parse Numeric:438.
    * Added timer_add() and timer_del() to API::Std for timers.