@@ -260,7 +260,7 @@ foreach my $cskey (keys %cservers) {
 			err(2, "Failed to connect to server: ".$cskey." [".$cservers{$cskey}{'host'}[0].":".$cservers{$cskey}{'port'}[0]."]", 0) 
 			and next;
 	}
-	API::Std::event_run("on_preconnect");
+	API::Std::event_run("on_preconnect", $cskey);
 	# Send USER and NICK.
 	socksnd($cskey, "USER ".$cservers{$cskey}{'ident'}[0]." * * :".$cservers{$cskey}{'realname'}[0]) or
 		err(2, "Failed to connect to server: ".$cskey." [".$cservers{$cskey}{'host'}[0].":".$cservers{$cskey}{'port'}[0]."]", 0) 
