@@ -57,6 +57,12 @@ sub ircparse
 			# send a PONG.
 			Auto::socksnd($svr, "PONG ".$ex[1]);
 		}
+		# If it's AUTHENTICATE
+		elsif ($ex[0] eq 'AUTHENTICATE') {
+			if (API::Std::mod_exists("SASLAuth")) {
+				m_SASLAuth::handle_authenticate($svr, @ex);
+			}
+		}
 		else {
 			# otherwise, check %RAWC for ex[1].
 			if (defined $RAWC{$ex[1]}) {
